--- a/Mvc5BlogProject/Views/Category/AdminCategoryList.cshtml
+++ b/Mvc5BlogProject/Views/Category/AdminCategoryList.cshtml
@@ -56,33 +56,24 @@
 
                             </th>
 
-                            <th style="width: 20%">
+                            <th style="width: 30%">
 
                                 Kategori Adı
 
                             </th>
 
-                            <th style="width: 15%">
+                            <th style="width: 20%">
 
                                 Son Blog
 
                             </th>
 
-                            <th style="width: 20%">
-
-                                Kategori Bar
-
-                            </th>
-
-                            <th style="width: 8%" class="text-center">
+                            <th style="width: 20%" class="text-center">
 
                                 Durum
 
                             </th>
 
-                            <th style="width: 20%">
-
-                            </th>
 
                         </tr>
 
@@ -132,23 +123,6 @@
 
                                 </td>
 
-                                <td class="project_progress">
-
-                                    <div class="progress progress-sm">
-
-                                        <div class="progress-bar bg-green" role="progressbar" aria-volumenow="57" aria-volumemin="0" aria-volumemax="100" style="width: 57%">
-
-                                        </div>
-
-                                    </div>
-
-                                    <small>
-
-                                        57% Complete
-
-                                    </small>
-
-                                </td>
 
                                 <td class="project-state">
 
@@ -158,7 +132,7 @@
 
                                 <td class="project-actions text-right">
 
-                                    <a class="btn btn-primary btn-sm" href="#">
+                                    <a class="btn btn-primary btn-sm" href="/Blog/BlogByCategory/@item.CategoryId/">
 
                                         <i class="fas fa-folder">
 
@@ -179,13 +153,10 @@
                                     </a>
 
                                     <a class="btn btn-danger btn-sm" href="/Category/CategoryDelete/@item.CategoryId">
-
-                                        <i class="fas fa-trash">
-
-                                        </i>
-
-                                        Sil
-
+                                        <i class="fas fa-trash"></i>Sil
+                                    </a>
+                                    <a class="btn btn-outline-success btn-sm" href="/Category/CategoryStatusTrue/@item.CategoryId">
+                                        <i class="fas fa-atom"></i>Aktif Yap
                                     </a>
                                 </td>
                             </tr>
