Admin Role Yetikleri Tamamlandi

--- a/Mvc5BlogProject/Views/Shared/_AdminLayout.cshtml
+++ b/Mvc5BlogProject/Views/Shared/_AdminLayout.cshtml
@@ -75,12 +75,15 @@
 
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                        <li class="nav-item">
-                            <a href="/Blog/AdminBlogList/" class="nav-link">
-                                <i class="nav-icon fas fa-th"></i>
-                                <p>Bloglar</p>
-                            </a>
-                        </li>
+                       @if (User.IsInRole("A"))
+                       {
+                           <li class="nav-item">
+                               <a href="/Blog/AdminBlogList/" class="nav-link">
+                                   <i class="nav-icon fas fa-th"></i>
+                                   <p>Bloglar</p>
+                               </a>
+                           </li>
+                       }
                         <li class="nav-item">
                             <a href="/Blog/AdminBlogList2/" class="nav-link">
                                 <i class="nav-icon fas fa-blog"></i>
@@ -147,7 +150,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/User/LogOut/" class="nav-link">
                                 <i class="nav-icon fas fa-door-closed"></i>
                                 <p>Çıkış Yap</p>
                             </a>
