--- a/Mvc5BlogProject/Views/User/BlogList.cshtml
+++ b/Mvc5BlogProject/Views/User/BlogList.cshtml
@@ -6,6 +6,7 @@
 }
 @{ string color = "";}
 @{ string caseName = "";}
+@{ int puan = 1;}
 
 <!DOCTYPE html>
 
@@ -85,38 +86,41 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            if (item.BlogRating >= 85)
+                            puan = item.BlogRating * 10;
+
+                            if (puan >= 85)
                             {
                                 color = "post-category text-white bg-success mb-3";
                                 caseName = "Çok iyi";
                             }
-                            if (item.BlogRating >= 70 && item.BlogRating <= 84)
+                            if (puan >= 70 && puan <= 84)
                             {
                                 color = "post-category text-white bg-info mb-3";
                                 caseName = "Başarılı";
                             }
-                            if (item.BlogRating >= 50 && item.BlogRating <= 69)
+                            if (puan >= 50 && puan <= 69)
                             {
                                 color = "post-category text-white bg-warning mb-3";
                                 caseName = "Fena Değil";
                             }
-                            if (item.BlogRating >= 0 && item.BlogRating <= 49)
+                            if (puan >= 0 && puan <= 49)
                             {
                                 color = "post-category text-white bg-danger mb-3";
                                 caseName = "Vasat";
                             }
-
+                        
                             <tr>
 
                                 <td>@item.BlogId</td>
 
                                 <td>@item.BlogTitle</td>
 
+
                                 <td class="project_progress">
 
                                     <div class="progress progress-sm">
 
-                                        <div class="progress-bar bg-green" role="progressbar" aria-volumenow="@item.BlogRating" aria-volumemin="0" aria-volumemax="10" style="width: @item.BlogRating%">
+                                        <div class="progress-bar bg-green" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10" style="width: @puan%">
 
                                         </div>
 
@@ -124,7 +128,7 @@
 
                                     <small>
 
-                                        Aldığı Puan :  @item.BlogRating
+                                        Aldığı Puan :  @puan
 
                                     </small>
 
