--- a/Mvc5BlogProject/Views/Comment/LeaveComment.cshtml
+++ b/Mvc5BlogProject/Views/Comment/LeaveComment.cshtml
@@ -16,6 +16,19 @@
             <textarea name="CommentText" cols="30" rows="10" class="form-control"></textarea>
         </div>
         <div class="form-group">
+            <label for="message">Puanınız: </label>
+            <label>@Html.RadioButton("BlogRating",1) 1</label>
+            <label>@Html.RadioButton("BlogRating",2) 2</label>
+            <label>@Html.RadioButton("BlogRating",3) 3</label>
+            <label>@Html.RadioButton("BlogRating",4) 4</label>
+            <label>@Html.RadioButton("BlogRating",5) 5</label>
+            <label>@Html.RadioButton("BlogRating",6) 6</label>
+            <label>@Html.RadioButton("BlogRating",7) 7</label>
+            <label>@Html.RadioButton("BlogRating",8) 8</label>
+            <label>@Html.RadioButton("BlogRating",9) 9</label>
+            <label>@Html.RadioButton("BlogRating",10) 10</label>
+        </div>
+        <div class="form-group">
             <input type="submit" value="Yorum Yap" class="btn btn-primary">
         </div>
 
