Kategori icin Validasyon Yapildi

--- a/Mvc5BlogProject/Views/Category/CategoryEdit.cshtml
+++ b/Mvc5BlogProject/Views/Category/CategoryEdit.cshtml
@@ -11,9 +11,11 @@
     <br />
     @Html.Label("Kategori Adı ")
     @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.CategoryName)
     <br />
     @Html.Label("Kategori Açıklaması")
     @Html.TextBoxFor(x => x.CategoryDescription, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.CategoryDescription)
     <br />
     <button class="btn btn-success">Kaydet</button>
 </form>
