--- a/Mvc5BlogProject/Views/Author/AddAuthor.cshtml
+++ b/Mvc5BlogProject/Views/Author/AddAuthor.cshtml
@@ -7,33 +7,43 @@
 <form class="form-group" method="post">
     @Html.Label("Yazar Adı Soyadı")
     @Html.TextBoxFor(x => x.AuthorName, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.AuthorName) 
     <br />
     @Html.Label("Resim Yolu")
     @Html.TextBoxFor(x => x.AuthorImage, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.AuthorImage)
     <br />
     @Html.Label("Yazar Yetenekler")
     @Html.TextBoxFor(x => x.AboutShort, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.AboutShort)
     <br />
     @Html.Label("Yazarın Mesleği")
     @Html.TextBoxFor(x => x.AuthorTitle, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.AuthorTitle)
     <br />
     @Html.Label("Mail Adresi")
     @Html.TextBoxFor(x => x.AuthorGmail, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.AuthorGmail)
     <br />
     @Html.Label("Instagram Adresi")
     @Html.TextBoxFor(x => x.AuthorInstagram, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.AuthorInstagram)
     <br />
     @Html.Label("Twitter Adresi")
     @Html.TextBoxFor(x => x.AuthorTwitter, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.AuthorTwitter)
     <br />
     @Html.Label("Şifre")
     @Html.TextBoxFor(x => x.Password, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.Password)
     <br />
     @Html.Label("Telefon")
     @Html.TextBoxFor(x => x.PhoneNumber, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.PhoneNumber)
     <br />
     @Html.Label("Hakkında")
     @Html.TextAreaFor(x => x.AuthorAbout, 10, 40, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.AuthorAbout)
     <br />
     <button class="btn btn-success">Kaydet</button>
 </form>
